--- a/newpage.html
+++ b/newpage.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
+    <title>Kidscraft - Minecraft party for kids 8-14 in MalmÃ¶</title>
     <meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
     <meta name="description"
-          content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2015.">
+          content="Kidscraft samlar barn i Ã¥ldern 8-14 Ã¥r fÃ¶r en spÃ¤nnande eftermiddag pÃ¥ stapeln den 8. Februari 2015.">
     <style>
 	
 	.body{
@@ -55,6 +55,7 @@
         }
         
     </style>
+
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
@@ -85,27 +86,27 @@ $(window).scroll(function() {
 
 <div class="content">
 	<br><br><br><br><br><br><br><br>
-	<h2>Är du mellan 8-14 år och älskar Minecraft lika mycket som vi gör?</h2>
-            <p><strong>Då bör du komma till Kidscraft SPACE 8 februari 2015, LAN:et där kidsen bestämmer! För fjärde gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
-Som förälder har ni dessutom chansen att delta på en gratis föreläsning om datorspel, e-sport och ungas spelande av Ronja Nordström från Sthlm e-sport och e-sportkommentatorn Sang Lee.
-Föreläsningen börjar kl. 13.00.
+	<h2>Ã„r du mellan 8-14 Ã¥r och Ã¤lskar Minecraft lika mycket som vi gÃ¶r?</h2>
+            <p><strong>DÃ¥ bÃ¶r du komma till Kidscraft SPACE 8 februari 2015, LAN:et dÃ¤r kidsen bestÃ¤mmer! FÃ¶r fjÃ¤rde gÃ¥ngen arrangerar vi Kidscraft, ett Minecraft LAN med tÃ¤vlingar och andra pÃ¥hitt.
+Som fÃ¶rÃ¤lder har ni dessutom chansen att delta pÃ¥ en gratis fÃ¶relÃ¤sning om datorspel, e-sport och ungas spelande av Ronja NordstrÃ¶m frÃ¥n Sthlm e-sport och e-sportkommentatorn Sang Lee.
+FÃ¶relÃ¤sningen bÃ¶rjar kl. 13.00.
             </strong></p>
 			<br>
 
-            <p>För att delta på Kidscraft "SPACE" krävs:
+            <p>FÃ¶r att delta pÃ¥ Kidscraft "SPACE" krÃ¤vs:
             <ul>
-                <li><strong>Medlemskap i föreningen</strong> (Första Kidscraft var helt gratis och vi vill gärna fortsätta hålla
-                    deltagaravgifterna så låga som möjligt.).
+                <li><strong>Medlemskap i fÃ¶reningen</strong> (FÃ¶rsta Kidscraft var helt gratis och vi vill gÃ¤rna fortsÃ¤tta hÃ¥lla
+                    deltagaravgifterna sÃ¥ lÃ¥ga som mÃ¶jligt.).
                 </li>
-                <li><strong>Egen dator</strong> (har du inte möjlighet att ta med en dator så hör av dig)
+                <li><strong>Egen dator</strong> (har du inte mÃ¶jlighet att ta med en dator sÃ¥ hÃ¶r av dig)
                 </li>
                 <li><strong>Eget Minecraft-login</strong> (<a href="https://minecraft.net/store" target="_blank">www.minecraft.net/store</a>)
                 </li>
             </ul>
             </p>
             <p>
-                <strong>KOM IHÅG</strong>: Det är viktigt att du registrerar dig på Minecraft redan innan Kidscraft, det kan du
-                göra här:
+                <strong>KOM IHÃ…G</strong>: Det Ã¤r viktigt att du registrerar dig pÃ¥ Minecraft redan innan Kidscraft, det kan du
+                gÃ¶ra hÃ¤r:
                 <a href="https://minecraft.net/store" target="_blank">minecraft.net/store</a>.
             </p>
 
@@ -115,81 +116,81 @@ Föreläsningen börjar kl. 13.00.
 			<iframe src="http://www.eventbrite.com/tickets-external?eid=15107588203&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
 			</div>
 			<a href="http://www.eventbrite.com/e/test-tickets-15601512544?ref=ebtn" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=15601512544" alt="Eventbrite - Test" /></a>
-        <h1>Varför arrangerar vi Kidscraft?</h1>
+        <h1>VarfÃ¶r arrangerar vi Kidscraft?</h1>
 
-        <p>Spelkultur är den snabbast växande formen av kulturutövande i Sverige. Enligt Statens medieråd spelar
-            över 80
-            procent av alla svenska barn och unga någon form av dator- eller tv-spel. Trots detta finns det extremt
-            få
-            LAN-event som riktar sig till just barn. Tillfällen där unga gamers skulle kunna få möjlighet att träffa
-            andra datorintresserade i sin egen ålder. Genom Kidscraft vill vi skapa en sådan mötesplats. En trygg
-            LAN-miljö för barn där kreativet och skapande samarbeten kan ligga i fokus.
+        <p>Spelkultur Ã¤r den snabbast vÃ¤xande formen av kulturutÃ¶vande i Sverige. Enligt Statens medierÃ¥d spelar
+            Ã¶ver 80
+            procent av alla svenska barn och unga nÃ¥gon form av dator- eller tv-spel. Trots detta finns det extremt
+            fÃ¥
+            LAN-event som riktar sig till just barn. TillfÃ¤llen dÃ¤r unga gamers skulle kunna fÃ¥ mÃ¶jlighet att trÃ¤ffa
+            andra datorintresserade i sin egen Ã¥lder. Genom Kidscraft vill vi skapa en sÃ¥dan mÃ¶tesplats. En trygg
+            LAN-miljÃ¶ fÃ¶r barn dÃ¤r kreativet och skapande samarbeten kan ligga i fokus.
         </p>
 
-        <p>För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan
+        <p>FÃ¶r personer som spelar datorspel Ã¤r det ganska uppenbart hur kul och utvecklande deras spelande kan
             vara.
-            Men tyvärr är inte synen på datorspelande lika okomplicerad. Datorspel har fått ett oförtjänt dåligt
+            Men tyvÃ¤rr Ã¤r inte synen pÃ¥ datorspelande lika okomplicerad. Datorspel har fÃ¥tt ett ofÃ¶rtjÃ¤nt dÃ¥ligt
             rykte i
-            media och betraktas fortfarande med föräldravärldens skepsis. I den egenskapen är Kidscraft är ett
-            pioniärprojekt. Ett projekt som går ut på att visa att spel kan användas för att främja kreativitet och
-            samarbete. Som kan uppmärksamma föräldrar, kritiker och beslutsfattare om behovet av alternativa
-            mötesplatser för barn och vikten av att utgå ifrån ungas egna intressen för att stimulera informella
-            demokrati- och läroprocesser.
+            media och betraktas fortfarande med fÃ¶rÃ¤ldravÃ¤rldens skepsis. I den egenskapen Ã¤r Kidscraft Ã¤r ett
+            pioniÃ¤rprojekt. Ett projekt som gÃ¥r ut pÃ¥ att visa att spel kan anvÃ¤ndas fÃ¶r att frÃ¤mja kreativitet och
+            samarbete. Som kan uppmÃ¤rksamma fÃ¶rÃ¤ldrar, kritiker och beslutsfattare om behovet av alternativa
+            mÃ¶tesplatser fÃ¶r barn och vikten av att utgÃ¥ ifrÃ¥n ungas egna intressen fÃ¶r att stimulera informella
+            demokrati- och lÃ¤roprocesser.
         </p>
 
-        <h1> Varför Minecraft?</h1>
+        <h1> VarfÃ¶r Minecraft?</h1>
 
-        <p>Minecraft var ett världsfenomen redan innan spelet hade lanserats. Den öppna spelvärlden i kombination
+        <p>Minecraft var ett vÃ¤rldsfenomen redan innan spelet hade lanserats. Den Ã¶ppna spelvÃ¤rlden i kombination
             med
             ett
-            enkelt system för att skapa, utvecklas och uppleva äventyr, erbjuder spelare möjligheten att uttrycka
+            enkelt system fÃ¶r att skapa, utvecklas och uppleva Ã¤ventyr, erbjuder spelare mÃ¶jligheten att uttrycka
             sig
             kreativt samtidigt som de kan ha roligt och skapa tillsammans med andra. En kombination som utan tvekan
             gjort
-            Minecraft till ett av världens mest populära spel.</p>
+            Minecraft till ett av vÃ¤rldens mest populÃ¤ra spel.</p>
 
-        <p>Minecraft har till skillnad från många andra spel en låg åldersgräns, är lätt att sätta sig in i och ett
-            upplägg
-            som uppmuntrar till samarbete och kreativitet. Faktorer som gör att Minecraft lämpar sig väldigt väl för
+        <p>Minecraft har till skillnad frÃ¥n mÃ¥nga andra spel en lÃ¥g Ã¥ldersgrÃ¤ns, Ã¤r lÃ¤tt att sÃ¤tta sig in i och ett
+            upplÃ¤gg
+            som uppmuntrar till samarbete och kreativitet. Faktorer som gÃ¶r att Minecraft lÃ¤mpar sig vÃ¤ldigt vÃ¤l fÃ¶r
             att
-            arbeta med barn och unga. Det är också ett exemplariskt verktyg för att visa på informella
-            läroprocesser.
+            arbeta med barn och unga. Det Ã¤r ocksÃ¥ ett exemplariskt verktyg fÃ¶r att visa pÃ¥ informella
+            lÃ¤roprocesser.
         </p>
 
         <h2>
-            Glöm inte att ta med
+            GlÃ¶m inte att ta med
         </h2>
         <ul>
 
-            <li>din egen <strong>dator</strong> (Har du inte en egen dator? Hör av dig så fort du kan genom att mejla oss!)
+            <li>din egen <strong>dator</strong> (Har du inte en egen dator? HÃ¶r av dig sÃ¥ fort du kan genom att mejla oss!)
             </li>
             <li>din <strong>Minecraft-login</strong></li>
-            <li>gärna en egen <strong>förgreningskontakt</strong> om du har en sån hemma!</li>
-            <li>om du har, en Ethernet <strong>nätsladd</strong> så att du får snabbara nätverk än om du surfar trådlöst.</li>
+            <li>gÃ¤rna en egen <strong>fÃ¶rgreningskontakt</strong> om du har en sÃ¥n hemma!</li>
+            <li>om du har, en Ethernet <strong>nÃ¤tsladd</strong> sÃ¥ att du fÃ¥r snabbara nÃ¤tverk Ã¤n om du surfar trÃ¥dlÃ¶st.</li>
         </ul>
 
         <h2>Regler</h2>
         <ul>
             <li><strong>Inget griefande</strong></li>
             <li><strong>Spela bara minecraft</strong>, inga andra internet-spel</li>
-            <li><strong>Använd bara de världar som finns uppsatta</strong>, inte dina egna, eftersom världen delas efter LANet. Andra världar kommer stängas ner.
+            <li><strong>AnvÃ¤nd bara de vÃ¤rldar som finns uppsatta</strong>, inte dina egna, eftersom vÃ¤rlden delas efter LANet. Andra vÃ¤rldar kommer stÃ¤ngas ner.
             </li>
         </ul>
 
-        <p>Om du har tips, funeringar eller önskemål om server setups (till exempel - vill du spela på en
+        <p>Om du har tips, funeringar eller Ã¶nskemÃ¥l om server setups (till exempel - vill du spela pÃ¥ en
             ScriptCraft
             Server?),
-            byggprojekt och andra ideer låt oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
+            byggprojekt och andra ideer lÃ¥t oss <a href="#Kontakt">veta</a> nedan. Det skall bli superkul att ha dig
             med!
         </p>
 		
-		<h2>Arrangörer</h2>
+		<h2>ArrangÃ¶rer</h2>
 
-        <p>Vi som arrangerar Kidscraft är</p>
+        <p>Vi som arrangerar Kidscraft Ã¤r</p>
 		<strong>
 		<ul>
-			<li>Alva Söder</li>
-			<li>Malcolm Nihlén-Green <a href="https://twitter.com/Script_Coded" target="_blank">@Script_Coded</a></li>
+			<li>Alva SÃ¶der</li>
+			<li>Malcolm NihlÃ©n-Green <a href="https://twitter.com/Script_Coded" target="_blank">@Script_Coded</a></li>
 			<li>Vidar Tedenbrant</li>
 			<li>Alfred Herlander</li>
 		</ul>
