--- a/newpage.html
+++ b/newpage.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
     <title>Kidscraft - Minecraft party for kids 8-14 in Malmö</title>
     <meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
     <meta name="description"
@@ -56,13 +56,7 @@
         
     </style>
 
-    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <script defer src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-    <script src="bootstrap/js/bootstrap.js"></script>
-    <script src="bootstrap/js/bootstrap-carousel.js"></script>
-    <script src="bootstrap/js/bootstrap-transition.js"></script>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
 </head>
 
