--- a/newpage.html
+++ b/newpage.html
@@ -76,6 +76,9 @@ $(window).scroll(function() {
 </script>
 <header>
 <img src="img\kidscraft.png" style="height: 100%;">
+	<a href="https://twitter.com/malmoesport" target="_blank"><img src="img\mesBird.png" style="height: 80%;"></a>
+	<a href="https://www.facebook.com/malmoesport" target="_blank"><img src="img\facebook.png" style="height: 80%;"></a>
+	<a href="https://malmoesport.se" target="_blank"><img src="img\mes.png" style="height: 80%;"></a>
 </header>
 
 <div class="content">
