--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
 Som förälder har ni dessutom chansen att delta på en gratis föreläsning om datorspel, e-sport och ungas spelande av Ronja Nordström från Sthlm e-sport och e-sportkommentatorn Sang Lee.
 Föreläsningen börjar kl. 13.00
             </p>
+            
+            <p><strong>Lanet börjar kl 13.00!</strong></p>
 
             <p>För att delta på Kidscraft "SPACE" krävs:
             <ul>
