--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 			border-bottom: thin solid #000000;
         }
 		
+		body {
+			
+		}
+		
 		.header-img {
 			height: 108px;
 			width: auto;
@@ -148,7 +152,7 @@ Föreläsningen börjar kl. 13.00.
 
             <p>För att delta på Kidscraft "SPACE" krävs:
             <ul>
-                <li><strong>Medlemskap i föreningen</strong> (Första Kidscraft var helt gratis och vi vill gärna fortsätta hålla
+                <li><strong>Medlemskap i föreningen (Ingår i biljetten!)</strong> (Första Kidscraft var helt gratis och vi vill gärna fortsätta hålla
                     deltagaravgifterna så låga som möjligt.).
                 </li>
                 <li><strong>Egen dator</strong> (har du inte möjlighet att ta med en dator så hör av dig)
