Another layout change

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         header.sticky {
             font-size: 24px;
             line-height: 48px;
-            height: 48px; 
+            height: auto; 
             background: linear-gradient(to right, red , blue);
             text-align: left;
             padding-left: 20px;
