--- a/index.html
+++ b/index.html
@@ -65,22 +65,11 @@
 		}
 		
 		.header-img {
-			height: 100%;
-			//height: 108px;
-			//width: auto;
-			background-size: contain;
-        }
-		
-		.header-div {
 			height: 108px;
 			width: auto;
-			height: auto;
-			max-width: 100%;
-			max-height: 108;
         }
 		
 		.header-img.sticky {
-			//height: auto;
 			height: 40px;
 			width: auto;
         }
@@ -152,14 +141,12 @@ $(window).scroll(function() {
 });
 </script>
 <header id="headerId">
-<div class="header-div">
-	<img class="header-img-title" src="img\kidscraft.png">
+<a href="#" onClick="test();"><img class="header-img-title" src="img\kidscraft.png"></a>
 	<a href="http://twitter.com/malmoesport/" target="_blank"><img class="header-img" src="img\mesBird.png"></a>
 	<a href="http://www.facebook.com/malmoesport/" target="_blank"><img class="header-img" src="img\facebook.png"></a>
 	<a href="http://malmoesport.se/" target="_blank"><img class="header-img" src="img\mes.png"></a>
 	<a href="http://spelkultur.nu/" target="_blank"><img class="header-img" src="img\spelkulturISkaneCrafty.png"></a>
 	<a href="http://skud.sverok.se/" target="_blank"><img id="skud-logo" class="skud-fixed" src="img\Sverok-SKuD-lila-CMYK.png"></a>
-</div>
 </header>
 
 <div class="content">
