--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Föreläsningen börjar kl. 13.00.
 			<li>Alva Söder</li>
 			<li>Malcolm Nihlén-Green <a href="https://twitter.com/Script_Coded" target="_blank">@Script_Coded</a></li>
 			<li>Vidar Tedenbrant</li>
-			<li>Alfred Herlander</li>
+			<li>Alfred Helander</li>
 			<li>Chris Jonasson <a href="https://twitter.com/chrishka" target="_blank">@Chrishka</a></li>
 		</ul>
 		</strong>
