--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<a href="about.html"><div id="item1" class="menuButton">
 							<span><p>Om</p></span>
 						</div></a>
-						<a href="tickets.html"><div id="item1" class="menuButton">
+						<a target="_blank" href="https://docs.google.com/forms/d/12kGJLd7lFIjABcW4gkRnrt-Hyo6zi8jvhKAcknQ27VM/viewform"><div id="item1" class="menuButton">
 							<span><p>Biljetter</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
@@ -44,13 +44,18 @@
 				</strong></p>
 				<br>
 
-				<p>För att delta på Kidscraft V krävs:
+				<p>För att delta på <strong>Kidscraft V</strong> krävs:
 				<ul>
-					<li><strong>Medlemskap i föreningen. Om du deltog på Kidscraft SPACE är du antagligen redan medlem.</strong>
+					<li><strong>Medlemskap i föreningen.</strong> Om du deltog på Kidscraft SPACE är du antagligen redan medlem.
 					</li>
-					<li><strong>Egen dator</strong> (har du inte möjlighet att ta med en dator så hör av dig)
+					<li><strong>Egen dator.</strong> Har du inte möjlighet att ta med en dator så hör av dig)
 					</li>
-					<li><strong>Eget Minecraft-login</strong> (<a href="https://minecraft.net/store" target="_blank">www.minecraft.net/store</a>)
+					<li><strong>Eget Minecraft-login.</strong> <a href="https://minecraft.net/store" target="_blank">www.minecraft.net/store</a>
+					</li>
+					<strong>Valfritt, men rekommenderas:</strong>
+					<li><strong>Förgreningskontakt</strong>
+					</li>
+					<li><strong>Ethernet nätsladd</strong> så att du får snabbara nätverk än om du surfar trådlöst.
 					</li>
 				</ul>
 				</p>
@@ -74,16 +79,6 @@
 
 För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan vara. Tyvärr är inte synen på datorspelande lika okomplicerad. Datorspel har fått ett oförtjänt dåligt rykte i media och betraktas fortfarande med föräldravärldens skepsis. Med Kidscraft vill vi låta barn och unga samlas runt sitt intresse, och på samma gång visa föräldrar vilka positiva effekter datorspel har. Vi vill visa att spel kan användas för att främja kreativitet och samarbete. Vi vill tidigt vara med att lära barn och unga en bra attityd kring datorspel, sina medspelare och sitt eget spelande.
 				</p>
-				
-				<h2>Glöm inte att ta med</h2>
-				<ul>
-
-					<li>Din egen <strong>dator</strong> (Har du inte en egen dator? Hör av dig så fort du kan genom att mejla oss!)
-					</li>
-					<li>Din <strong>Minecraft-login</strong></li>
-					<li>Gärna en egen <strong>förgreningskontakt</strong> om du har en sån hemma!</li>
-					<li>Om du har, en Ethernet <strong>nätsladd</strong> så att du får snabbara nätverk än om du surfar trådlöst.</li>
-				</ul>
 
 				<h2>Regler</h2>
 				<ul>
@@ -92,9 +87,9 @@ För personer som spelar datorspel är det ganska uppenbart hur kul och utveckla
 					<li><strong>Använd bara de världar som finns uppsatta</strong>, inte dina egna, eftersom världen delas efter LANet. Andra världar kommer stängas ner.
 					</li>
 				</ul>
-			</div>
-			<div id="footer">
-				<small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small>
+				<div id="footer">
+					<small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small>
+				</div><br>
 			</div>
 		</div>
 	</body>
