--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<span><p>Om</p></span>
 						</div></a>
 						<a target="_blank" href="https://docs.google.com/forms/d/12kGJLd7lFIjABcW4gkRnrt-Hyo6zi8jvhKAcknQ27VM/viewform"><div id="item1" class="menuButton">
-							<span><p>Biljetter</p></span>
+							<span><p>Biljetters</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
 							<span><p>Tidigare</p></span>
