Added comment explaining problem
Comment: "For some reason GitHub pages doesen't load the latest version
of the commit, but the one before, so this comment is here to "update"
GitHub pages."

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 ﻿<html lang="en">
+	<!--
+		For some reason GitHub pages doesen't load the latest version of the commit, but the one before, so this comment is here to "update" GitHub pages.
+	-->
 	<head>
 		<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
 		<meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
