Added ticket button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 					Då bör du komma till Kidscraft V 30 augusti 2015, LAN:et där kidsen bestämmer! För femte gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
 				</strong></p>
 				<br>
+				<a href="#" class="button"/>Biljetter</a>
 
 				<p>För att delta på <strong>Kidscraft V</strong> krävs:
 				<ul>
