--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 					Då bör du komma till Kidscraft V 30 augusti 2015, LAN:et där kidsen bestämmer! För femte gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
 				</strong></p>
 				<br>
-				<a href="#" class="button"/>Biljetter</a>
-
+				<div id="ticketButton">
+					<a href="#" class="button"/>Köp Biljetter Här</a>
+				</div>
 				<p>För att delta på <strong>Kidscraft V</strong> krävs:
 				<ul>
 					<li><strong>Medlemskap i föreningen.</strong> Om du deltog på Kidscraft SPACE är du antagligen redan medlem.
@@ -79,16 +80,18 @@
 				<h1>Varför arrangerar vi Kidscraft?</h1>
 				
 				<p>
-					Spelkultur är den snabbast växande formen av kulturutövande i Sverige. Enligt Statens medieråd spelar över 80 procent av alla svenska barn och unga någon form av dator- eller tv-spel. Trots detta finns det extremt få LAN-event som riktar sig till just barn. Tillfällen där unga gamers skulle kunna få möjlighet att träffa andra datorintresserade i sin egen ålder. Genom Kidscraft vill vi skapa en sådan mötesplats. En trygg LAN-miljö för barn där kreativet och skapande samarbeten kan ligga i fokus. Malmö e-sport vill engagera och aktivera unga och barn utan att styras av kommersiella intressen. Vi tror det är väldigt viktigt med ideella krafter som jobbar för att barn och unga ska få göra vad de vill på sin fritid.
+					Spelkultur är den snabbast växande formen av kulturutövande i Sverige. Enligt Statens medieråd spelar över 80 procent av alla svenska barn och unga någon form av dator- eller tv-spel. Trots detta finns det extremt få LAN-event som riktar sig till just barn. Tillfällen där unga gamers skulle kunna få möjlighet att träffa andra datorintresserade i sin egen ålder.
+					<br><br>Genom Kidscraft vill vi skapa en sådan mötesplats. En trygg LAN-miljö för barn där kreativet och skapande samarbeten kan ligga i fokus. Malmö e-sport vill engagera och aktivera unga och barn utan att styras av kommersiella intressen. Vi tror det är väldigt viktigt med ideella krafter som jobbar för att barn och unga ska få göra vad de vill på sin fritid.
 
-För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan vara. Tyvärr är inte synen på datorspelande lika okomplicerad. Datorspel har fått ett oförtjänt dåligt rykte i media och betraktas fortfarande med föräldravärldens skepsis. Med Kidscraft vill vi låta barn och unga samlas runt sitt intresse, och på samma gång visa föräldrar vilka positiva effekter datorspel har. Vi vill visa att spel kan användas för att främja kreativitet och samarbete. Vi vill tidigt vara med att lära barn och unga en bra attityd kring datorspel, sina medspelare och sitt eget spelande.
+För personer som spelar datorspel är det ganska uppenbart hur kul och utvecklande deras spelande kan vara. Tyvärr är inte synen på datorspelande lika okomplicerad. 
+					<br><br>Datorspel har fått ett oförtjänt dåligt rykte i media och betraktas fortfarande med föräldravärldens skepsis. Med Kidscraft vill vi låta barn och unga samlas runt sitt intresse, och på samma gång visa föräldrar vilka positiva effekter datorspel har. Vi vill visa att spel kan användas för att främja kreativitet och samarbete. Vi vill tidigt vara med att lära barn och unga en bra attityd kring datorspel, sina medspelare och sitt eget spelande.
 				</p>
 
 				<h2>Regler</h2>
 				<ul>
 					<li><strong>Inget griefande</strong></li>
 					<li><strong>Spela bara minecraft</strong>, inga andra internet-spel</li>
-					<li><strong>Använd bara de världar som finns uppsatta</strong>, inte dina egna, eftersom världen delas efter LANet. Andra världar kommer stängas ner.
+					<li><strong>Använd bara de världar som finns uppsatta</strong>, inte dina egna, eftersom världen delas efter LANet. Andra världar kommer stängas ner
 					</li>
 				</ul>
 				<div id="footer">
