--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<ul>
 					<li><strong>Medlemskap i föreningen.</strong> Om du deltog på Kidscraft SPACE är du antagligen redan medlem.
 					</li>
-					<li><strong>Egen dator.</strong> Har du inte möjlighet att ta med en dator så hör av dig)
+					<li><strong>Egen dator.</strong> Har du inte möjlighet att ta med en dator så hör av dig
 					</li>
 					<li><strong>Eget Minecraft-login.</strong> <a href="https://minecraft.net/store" target="_blank">www.minecraft.net/store</a>
 					</li>
