Great winter update ;)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
 		<meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
-		<title>Kidscraft V</title>
+		<title>Kidscraft Craftmas</title>
 		<meta name="description" content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2015.">
 		<link href="style.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -16,10 +16,13 @@
 		</script>
 	</head>
 	<body>
+		<div id="snowflakeContainer">
+		    <p class="snowflake"><img src="img/snow.png"></p>
+		</div>
 		<div id="wrapper">
 			<div id="header">
 				<div id="logo">
-					<img src="img/logo.png"></img>
+					<img src="img/logoCraftmas.png"></img>
 				</div>
 				<div id="nav">
 					<div id="menu">
@@ -29,7 +32,7 @@
 						<a href="about.html"><div id="item1" class="menuButton">
 							<span><p>Om</p></span>
 						</div></a>
-						<a target="_blank" href="https://docs.google.com/forms/d/12kGJLd7lFIjABcW4gkRnrt-Hyo6zi8jvhKAcknQ27VM/viewform"><div id="item1" class="menuButton">
+						<a target="_blank" href=""><div id="item1" class="menuButton">
 							<span><p>Biljetter</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
@@ -43,15 +46,15 @@
 				<h1>Är du mellan 8-14 år och älskar Minecraft lika mycket som vi gör?</h1>
 				
 				<p><strong>
-					Då bör du komma till Kidscraft V 30 augusti 2015, LAN:et där kidsen bestämmer! För femte gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
+					Då bör du komma till Kidscraft Craftmas 12 december 2015, LAN:et där kidsen bestämmer! För sjätte gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
 				</strong></p>
 				<br>
 				<div id="ticketButton">
 					<a href="#" class="button"/>Köp Biljetter Här</a>
 				</div>
-				<p>För att delta på <strong>Kidscraft V</strong> krävs:
+				<p>För att delta på <strong>Kidscraft Craftmas</strong> krävs:
 				<ul>
-					<li><strong>Medlemskap i föreningen.</strong> Om du deltog på Kidscraft SPACE är du antagligen redan medlem.
+					<li><strong>Medlemskap i föreningen.</strong> Om du deltog på Kidscraft V är du antagligen redan medlem.
 					</li>
 					<li><strong>Egen dator.</strong> Har du inte möjlighet att ta med en dator så hör av dig
 					</li>
@@ -100,4 +103,5 @@ För personer som spelar datorspel är det ganska uppenbart hur kul och utveckla
 			</div>
 		</div>
 	</body>
+	<script src="fallingsnow_v6.js"></script>
 </html>
