--- a/about.html
+++ b/about.html
@@ -1,8 +1,11 @@
-<html lang="en">
+﻿<html lang="en">
+	<!--
+		For some reason GitHub pages doesen't load the latest version of the commit, but the one before, so this comment is here to "update" GitHub pages.
+	-->
 	<head>
 		<meta http-equiv="content-type" content="text/html" charset="ISO-8859-1" />
 		<meta name="viewport" content="width=devSPACE-width, initial-scale=1.0">
-		<title>Kidscraft V</title>
+		<title>Kidscraft Craftmas</title>
 		<meta name="description" content="Kidscraft samlar barn i åldern 8-14 år för en spännande eftermiddag på stapeln den 8. Februari 2015.">
 		<link href="style.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -13,10 +16,13 @@
 		</script>
 	</head>
 	<body>
+		<div id="snowflakeContainer">
+		    <p class="snowflake"><img src="img/snow.png"></p>
+		</div>
 		<div id="wrapper">
 			<div id="header">
 				<div id="logo">
-					<img src="img/logo.png"></img>
+					<img src="img/logoCraftmas.png"></img>
 				</div>
 				<div id="nav">
 					<div id="menu">
@@ -26,7 +32,7 @@
 						<a href="about.html"><div id="item1" class="menuButton">
 							<span><p>Om</p></span>
 						</div></a>
-						<a target="_blank" href="https://docs.google.com/forms/d/12kGJLd7lFIjABcW4gkRnrt-Hyo6zi8jvhKAcknQ27VM/viewform"><div id="item1" class="menuButton">
+						<a target="_blank" href=""><div id="item1" class="menuButton">
 							<span><p>Biljetter</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
@@ -41,7 +47,8 @@
 			</div>
 			<div id="footer">
 				<small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small>
-			</div>
+			</div><br>
 		</div>
 	</body>
+	<script src="fallingsnow_v6.js"></script>
 </html>
