--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			<div id="content">
 				<h1>Är du mellan 8-14 år och älskar Minecraft lika mycket som vi gör?</h1>
 				
-				<p><strong>
+				<center><p><strong>
 					Då bör du komma till Kidscraft Craftmas 12 december 2015, LAN:et där kidsen bestämmer! För sjätte gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
-				</strong></p>
+				</strong></p></center>
 				<br>
 				<div id="ticketButton">
 					<a href="#" class="button"/>Köp Biljetter Här</a>
@@ -97,10 +97,10 @@ För personer som spelar datorspel är det ganska uppenbart hur kul och utveckla
 					<li><strong>Använd bara de världar som finns uppsatta</strong>, inte dina egna, eftersom världen delas efter LANet. Andra världar kommer stängas ner
 					</li>
 				</ul>
-				<div id="footer">
-					<small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small>
-				</div><br>
 			</div>
+			<div id="footer">
+				<small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small>
+			</div><br>
 		</div>
 	</body>
 	<script src="fallingsnow_v6.js"></script>
