Updated Important Info

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<a href="about.html"><div id="item1" class="menuButton">
 							<span><p>Om</p></span>
 						</div></a>
-						<a target="_blank" href=""><div id="item1" class="menuButton">
+						<a target="_blank" href="https://www.eventbrite.com/e/kidscraft-craftmas-tickets-19621729120"><div id="item1" class="menuButton">
 							<span><p>Biljetter</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
@@ -43,19 +43,19 @@
 			</div>
 			<div id="headerShadow"></div>
 			<div id="content">
-				<h1>Är du mellan 8-14 år och älskar Minecraft lika mycket som vi gör?</h1>
+				<h1>Nu händer det igen!</h1>
 				
-				<center><p><strong>
-					Då bör du komma till Kidscraft Craftmas 12 december 2015, LAN:et där kidsen bestämmer! För sjätte gången arrangerar vi Kidscraft, ett Minecraft LAN med tävlingar och andra påhitt.
-				</strong></p></center>
+				<p>
+					 Kidscraft Craftmas arrangeras den 12/12 på Stpln i Malmö, Stapelbäddsgatan 3. Som ett av Sveriges största Minecraft LAN anpassar vi oss specifikt för barn och unga under 15 år. Under LANet arrangeras ett flertal tävlingar med priser från bland annat Mojang. Vi utlovar en härlig stämning med många goda minnen.<br>
+
+Kidscraft arrangeras av barn för barn. Det finns ett flertal fördelar med det här konceptet. Vi har koll på vad unga tycker är om idag, och vet hur vi ska skapa en miljö vi tycker är rolig och säker. Arrangörerna har flera års erfarenhet, och LAN För Barn som arrangerar Craftmas har en stabil grund och ekonomi. Vi är en del av Malmö e-sport, en väletablerad förening som håller på med bland annat spelutövandet i Malmö.
+				</p>
 				<br>
 				<div id="ticketButton">
-					<a href="#" class="button"/>Köp Biljetter Här</a>
+					<a target="_blank" href="https://www.eventbrite.com/e/kidscraft-craftmas-tickets-19621729120" class="button"/>Köp Biljetter Här</a>
 				</div>
 				<p>För att delta på <strong>Kidscraft Craftmas</strong> krävs:
 				<ul>
-					<li><strong>Medlemskap i föreningen.</strong> Om du deltog på Kidscraft V är du antagligen redan medlem.
-					</li>
 					<li><strong>Egen dator.</strong> Har du inte möjlighet att ta med en dator så hör av dig
 					</li>
 					<li><strong>Eget Minecraft-login.</strong> <a href="https://minecraft.net/store" target="_blank">www.minecraft.net/store</a>
@@ -96,10 +96,11 @@ För personer som spelar datorspel är det ganska uppenbart hur kul och utveckla
 					<li><strong>Spela bara minecraft</strong>, inga andra internet-spel</li>
 					<li><strong>Använd bara de världar som finns uppsatta</strong>, inte dina egna, eftersom världen delas efter LANet. Andra världar kommer stängas ner
 					</li>
-				</ul>
+				</ul><br>
+				<center><small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small></center><br>
 			</div>
 			<div id="footer">
-				<small>&copy; 2014<script>new Date().getFullYear()>2010&&document.write("-"+new Date().getFullYear());</script>, LAN f&ouml;r barn, Malm&ouml; e-sport.</small>
+				
 			</div><br>
 		</div>
 	</body>
