--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				
 				<p>
 					 Kidscraft Craftmas arrangeras den 12/12 på Stpln i Malmö, Stapelbäddsgatan 3. Som ett av Sveriges största Minecraft LAN anpassar vi oss specifikt för barn och unga under 15 år. Under LANet arrangeras ett flertal tävlingar med priser från bland annat Mojang. Vi utlovar en härlig stämning med många goda minnen.<br>
+LANet håller på från 12.00-18.00. Dörrarna öppnas vid 11.00.
 
 Kidscraft arrangeras av barn för barn. Det finns ett flertal fördelar med det här konceptet. Vi har koll på vad unga tycker är om idag, och vet hur vi ska skapa en miljö vi tycker är rolig och säker. Arrangörerna har flera års erfarenhet, och LAN För Barn som arrangerar Craftmas har en stabil grund och ekonomi. Vi är en del av Malmö e-sport, en väletablerad förening som håller på med bland annat spelutövandet i Malmö.
 				</p>
