--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<a href="about.html"><div id="item1" class="menuButton">
 							<span><p>Om</p></span>
 						</div></a>
-						<a target="_blank" href="https://www.eventbrite.com/e/kidscraft-craftmas-tickets-19621729120"><div id="item1" class="menuButton">
+						<a target="_blank" href="http://www.craftmas.eventbrite.com/"><div id="item1" class="menuButton">
 							<span><p>Biljetter</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
@@ -50,6 +50,12 @@
 LANet håller på från 12.00-18.00. Dörrarna öppnas vid 11.00.
 
 Kidscraft arrangeras av barn för barn. Det finns ett flertal fördelar med det här konceptet. Vi har koll på vad unga tycker är om idag, och vet hur vi ska skapa en miljö vi tycker är rolig och säker. Arrangörerna har flera års erfarenhet, och LAN För Barn som arrangerar Craftmas har en stabil grund och ekonomi. Vi är en del av Malmö e-sport, en väletablerad förening som håller på med bland annat spelutövandet i Malmö.
+				</p>
+				<br>
+				<p>
+				<strong>Viktigt:</strong><br>
+				<strong>Tid: </strong>12.00-18.00 12/12  Insläpp 11.00<br>
+				<strong>Plats: </strong>Stpln, Malmö, Stapelbäddsgatan 3
 				</p>
 				<br>
 				<div id="ticketButton">
