--- a/earlier.html
+++ b/earlier.html
@@ -32,7 +32,7 @@
 						<a href="about.html"><div id="item1" class="menuButton">
 							<span><p>Om</p></span>
 						</div></a>
-						<a target="_blank" href=""><div id="item1" class="menuButton">
+						<a target="_blank" href="http://www.craftmas.eventbrite.com/"><div id="item1" class="menuButton">
 							<span><p>Biljetter</p></span>
 						</div></a>
 						<a href="earlier.html"><div id="item1" class="menuButton">
