--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Kidscraft arrangeras av barn för barn. Det finns ett flertal fördelar med det 
 				</div>
 				<p>För att delta på <strong>Kidscraft Craftmas</strong> krävs:
 				<ul>
-					<li><strong>Egen dator.</strong> Har du inte möjlighet att ta med en dator så hör av dig
+					<li><strong>Egen dator.</strong>
 					</li>
 					<li><strong>Eget Minecraft-login.</strong> <a href="https://minecraft.net/store" target="_blank">www.minecraft.net/store</a>
 					</li>
